# annual-report

.github/: dependabot.yml
telco_v1/: 1_Financials.qmd  2_Grondslagen.qmd  3_Toelichting.qmd  _quarto.yml  contracts.yml  lil_exibble.xlsx  main.py  notes.txt  pyproject.toml  requirements.txt
telco_v1/_data/: ar23.xlsx
telco_v1/source/: bs.py  cf.py  is.py  my_excel_lib.py
telco_v1/source/my_excel_lib/: __init__.py
telco_v1/source/my_excel_lib/mappings/: balance_sheet_mapping.py  profit_loss_mapping.py  report_utils.py
telco_v1/source/my_excel_lib/styles/: balance_sheet_style.py  profit_loss_style.py
