[project]
name = "my_excel_lib"
version = "0.1.0"
description = "Reporting utilities"
authors = [{name="Jan-Ru Muller"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "great-tables>=0.18.0",
    "jupyter>=1.1.1",
    "narwhals>=2.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=10.0.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]
